--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -18,13 +18,14 @@
         <h3 class="fw-bold text-primary mb-3">{{ product.price }} €</h3>
         <p class="lead">{{ product.description }}</p>
 
-        {# Form per aggiungere al carrello (verrà implementato nell'app orders) #}
-        <form action="#" method="post" class="mt-4">
+        <form action="{% url 'orders:cart_add' product.id %}" method="post" class="mt-4">
             {% csrf_token %}
-            <div class="input-group mb-3" style="max-width: 150px;">
-                <label for="quantity" class="input-group-text rounded-start-3">Quantità:</label>
-                <input type="number" id="quantity" name="quantity" value="1" min="1" class="form-control rounded-end-3" aria-label="Quantità">
+            <div class="input-group mb-3">
+                <label for="{{ cart_product_form.quantity.id_for_label }}" class="input-group-text rounded-start-3">Quantità:</label>
+                {{ cart_product_form.quantity }}
+                {{ cart_product_form.override }}
             </div>
+
             <button type="submit" class="btn btn-primary btn-lg rounded-3">Aggiungi al Carrello</button>
         </form>
 
