--- a/products/templates/products/product_list.html
+++ b/products/templates/products/product_list.html
@@ -8,9 +8,9 @@
     <div class="col-md-3">
         <h4 class="mb-3">Categorie</h4>
         <div class="list-group rounded-3">
-            <a href="{% url 'products:product_list' %}" class="list-group-item list-group-item-action {% if not category %}active{% endif %} rounded-top-3">Tutte le Categorie</a>
+            <a href="{% url 'products:product_list' %}" class="list-group-item list-group-item-action {% if not selected_category %}active{% endif %} rounded-top-3">Tutte le Categorie</a>
             {% for cat in categories %}
-                <a href="{{ cat.get_absolute_url }}" class="list-group-item list-group-item-action {% if category and category.slug == cat.slug %}active{% endif %}">{{ cat.name }}</a>
+                <a href="{% url 'products:product_list_by_category' category_slug=cat.slug %}" class="list-group-item list-group-item-action {% if selected_category and selected_category.slug == cat.slug %}active{% endif %}">{{ cat.name }}</a>
             {% endfor %}
         </div>
     </div>
@@ -20,6 +20,11 @@
             {% for product in products %}
             <div class="col">
                 <div class="card h-100">
+                    {% if product.image %}
+                        <img src="{{ product.image.url }}" class="card-img-top p-3" alt="{{ product.name }}" style="max-height: 200px; object-fit: contain;">
+                    {% else %}
+                        <img src="https://placehold.co/400x200/cccccc/333333?text=Nessuna+Immagine" class="card-img-top p-3" alt="Nessuna Immagine" style="max-height: 200px; object-fit: contain;">
+                    {% endif %}
                     <div class="card-body">
                         <h5 class="card-title">{{ product.name }}</h5>
                         <p class="card-text text-muted">{{ product.category.name }}</p>
