--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -13,7 +13,7 @@
                     </div>
                 </form>
                 <div class="text-center mt-3">
-                    <small class="text-muted">Non hai un account? <a href="{% url 'register' %}" class="text-decoration-none">Registrati ora</a></small>
+                    <small class="text-muted">Non hai un account? <a href="{% url 'users:register' %}" class="text-decoration-none">Registrati ora</a></small>
                 </div>
             </div>
         </div>
