--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -1,4 +1,6 @@
 {% extends "base.html" %}
+{% load django_bootstrap5 %}
+
 
 {% block content %}
     <div class="row justify-content-center mt-5">
@@ -7,9 +9,9 @@
                 <h2 class="text-center mb-4">Accedi</h2>
                 <form method="post">
                     {% csrf_token %}
-                    {{ form.as_p }}
+                    {% bootstrap_form form layout="floating" %}
                     <div class="d-grid gap-2">
-                        <button type="submit" class="btn btn-primary rounded-3">Login</button>
+                        {% bootstrap_button button_type="submit" content="Login" %}
                     </div>
                 </form>
                 <div class="text-center mt-3">
