--- a/orders/templates/orders/order_create.html
+++ b/orders/templates/orders/order_create.html
@@ -1,4 +1,6 @@
 {% extends 'base.html' %}
+{% load django_bootstrap5 %}
+
 
 {% block title %}Checkout{% endblock %}
 
@@ -8,38 +10,9 @@
     <div class="col-md-7">
         <form method="post" class="needs-validation" novalidate>
             {% csrf_token %}
-            <div class="row g-3">
-                <div class="col-sm-6">
-                    <label for="{{ form.first_name.id_for_label }}" class="form-label">Nome</label>
-                    {{ form.first_name }}
-                    {% if form.first_name.errors %}<div class="invalid-feedback d-block">{{ form.first_name.errors }}</div>{% endif %}
-                </div>
-                <div class="col-sm-6">
-                    <label for="{{ form.last_name.id_for_label }}" class="form-label">Cognome</label>
-                    {{ form.last_name }}
-                    {% if form.last_name.errors %}<div class="invalid-feedback d-block">{{ form.last_name.errors }}</div>{% endif %}
-                </div>
-                <div class="col-12">
-                    <label for="{{ form.email.id_for_label }}" class="form-label">Email</label>
-                    {{ form.email }}
-                    {% if form.email.errors %}<div class="invalid-feedback d-block">{{ form.email.errors }}</div>{% endif %}
-                </div>
-                <div class="col-12">
-                    <label for="{{ form.address.id_for_label }}" class="form-label">Indirizzo</label>
-                    {{ form.address }}
-                    {% if form.address.errors %}<div class="invalid-feedback d-block">{{ form.address.errors }}</div>{% endif %}
-                </div>
-                <div class="col-md-6">
-                    <label for="{{ form.postal_code.id_for_label }}" class="form-label">CAP</label>
-                    {{ form.postal_code }}
-                    {% if form.postal_code.errors %}<div class="invalid-feedback d-block">{{ form.postal_code.errors }}</div>{% endif %}
-                </div>
-                <div class="col-md-6">
-                    <label for="{{ form.city.id_for_label }}" class="form-label">Città</label>
-                    {{ form.city }}
-                    {% if form.city.errors %}<div class="invalid-feedback d-block">{{ form.city.errors }}</div>{% endif %}
-                </div>
-            </div>
+
+            {% bootstrap_form form %}
+
             <hr class="my-4">
             <button class="w-100 btn btn-primary btn-lg rounded-3" type="submit">Completa Ordine</button>
         </form>
