--- a/users/templates/users/register.html
+++ b/users/templates/users/register.html
@@ -1,4 +1,6 @@
 {% extends "base.html" %}
+{% load django_bootstrap5 %}
+
 
 {% block content %}
     <div class="col-md-6 mx-auto">
@@ -6,21 +8,10 @@
             <h2 class="text-center mb-4">Registrati</h2>
             <form method="post">
                 {% csrf_token %}
-{#                {% for field in form %}#}
-{#                    <div class="mt-3 input-group">#}
-{#                        <label for="{{ field.id_for_label }}" class="input-group-text rounded-start-3">{{ field.label }}</label>#}
-{#                        {{ field }}#}
-{#                    </div>#}
-{#                    {% if field.help_text %}#}
-{#                        <small class="form-text text-muted">{{ field.help_text }}</small>#}
-{#                    {% endif %}#}
-{#                    {% for error in field.errors %}#}
-{#                        <div class="text-danger">{{ error }}</div>#}
-{#                    {% endfor %}#}
-{#                {% endfor %}#}
-                {{ form.as_p }}
+                {% bootstrap_form form layout="floating" %}
+
                 <div class="d-grid gap-2">
-                    <button type="submit" class="btn btn-success rounded-3">Registrati</button>
+                    {% bootstrap_button button_type="submit" content="Registrati" button_class="btn-success"%}
                 </div>
             </form>
             <div class="text-center mt-3">
